test/spec/type.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/type.wast
(;; STDOUT ;;;
out/test/spec/type.wast:44: assert_malformed passed:
  out/test/spec/type/type.1.wat:1:27: error: unexpected token "param", expected param or result.
  (type (func (result i32) (param i32)))
                            ^^^^^
out/test/spec/type.wast:48: assert_malformed passed:
  out/test/spec/type/type.2.wat:1:21: error: unexpected token $x, expected ).
  (type (func (result $x i32)))
                      ^^
2/2 tests passed.
;;; STDOUT ;;)
